# brainfuck_interpreter

./: .pre-commit-config.yaml  README.md  credit.bf  fibonacci.bf  interpreter.py  pyproject.toml
